--- a/HW-03/main.css
+++ b/HW-03/main.css
@@ -40,5 +40,5 @@ a{
     }
     .lessons li:nth-child(17){border-color: #8bc63e;}
     .lessons li:hover {border-left: 10px solid transparent;}
-    /* .lessons li:nth-child(17):hover {border-right: 10px solid #f05d22;} */
+    .lessons li:nth-child(17):hover {border-right: 10px solid #f05d22;}
   
