--- a/HW-10/HW-10-03/main.css
+++ b/HW-10/HW-10-03/main.css
@@ -38,7 +38,7 @@ a{
     transition: 0.3s all linear;
 
     }
-    .lessons li:nth-child(19){border-color: #8bc63e;}
+    .lessons li:nth-child(17){border-color: #8bc63e;}
     .lessons li:hover {border-left: 10px solid transparent;}
-    /* .lessons li:nth-child(17):hover {border-right: 10px solid #f05d22;} */
+    .lessons li:nth-child(17):hover {border-right: 10px solid #f05d22;}
   
