--- a/HW-11/main.css
+++ b/HW-11/main.css
@@ -13,7 +13,7 @@ body{
 a{ 
     color: rgb(3, 8, 51);
     text-decoration: none;
-    font-size: 200%;
+    font-size: 250%;
     font-family: 'Times New Roman', Times, serif;
     font-weight: bold;
 
@@ -28,7 +28,7 @@ a{
     padding: 7px 20px;
     margin-bottom: 10px;
     border-radius: 5px;
-    border-left: 10px solid #f05d22; 
+    border-left: 10px solid #8bc63e; 
     box-shadow: 2px -2px 5px 0 rgba(0,0,0,.1),
          -2px -2px 5px 0 rgba(0,0,0,.1),
         2px 2px 5px 0 rgba(0,0,0,.1),
@@ -38,7 +38,5 @@ a{
     transition: 0.3s all linear;
 
     }
-    .lessons li:nth-child(21){border-color: #8bc63e;}
     .lessons li:hover {border-left: 10px solid transparent;}
-    /* .lessons li:nth-child(17):hover {border-right: 10px solid #f05d22;} */
   
